# frequalizer

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml
src/: Analyser.h  FrequalizerEditor.cpp  FrequalizerEditor.h  FrequalizerProcessor.cpp  FrequalizerProcessor.h
